WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121153
[WinCairo] Compile errors.
https://bugs.webkit.org/show_bug.cgi?id=121153
Summary
[WinCairo] Compile errors.
peavo
Reported
2013-09-11 04:17:53 PDT
There are a couple of compile errors in WebCore: ..\page\win\FrameCairoWin.cpp(38): error C2248: 'WTF::GDIObject::GDIObject' : cannot access private member declared in class 'WTF::GDIObject' with [ T=HBITMAP ] \include\private\wtf/win/GDIObject.h(68) : see declaration of 'WTF::GDIObject::GDIObject' with [ T=HBITMAP ] ..\platform\graphics\win\FontCustomPlatformDataCairo.cpp(64): error C2664: 'cairo_win32_font_face_create_for_hfont' : cannot convert parameter 1 from 'WTF::GDIObject' to 'HFONT' with [ T=HFONT ] No user-defined-conversion operator available that can perform this conversion, or the operator cannot be called
Attachments
Patch
(1.91 KB, patch)
2013-09-11 04:24 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2013-09-11 04:24:48 PDT
Created
attachment 211298
[details]
Patch
Brent Fulgham
Comment 2
2013-09-11 09:26:17 PDT
Comment on
attachment 211298
[details]
Patch r=me. Thanks for fixing this. I'll probably break a few more things before I am done :-(
WebKit Commit Bot
Comment 3
2013-09-11 09:49:41 PDT
Comment on
attachment 211298
[details]
Patch Clearing flags on attachment: 211298 Committed
r155537
: <
http://trac.webkit.org/changeset/155537
>
WebKit Commit Bot
Comment 4
2013-09-11 09:49:42 PDT
All reviewed patches have been landed. Closing bug.
peavo
Comment 5
2013-09-11 10:20:14 PDT
(In reply to
comment #2
)
> (From update of
attachment 211298
[details]
) > r=me. Thanks for fixing this. I'll probably break a few more things before I am done :-(
No worries, thanks for reviewing :)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug