[WinCairo] Compile errors. https://bugs.webkit.org/show_bug.cgi?id=121153

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-09-11
Reviewed by Brent Fulgham.

* page/win/FrameCairoWin.cpp:
(WebCore::imageFromRect): Return empty GDIObject.
* platform/graphics/win/FontCustomPlatformDataCairo.cpp:
(WebCore::FontCustomPlatformData::fontPlatformData): Get actual handle from GDIObject.

Canonical link: https://commits.webkit.org/139095@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155537 268f45cc-cd09-0410-ab3c-d52691b4dbfc