Source/WebCore/platform/graphics/win/FontCustomPlatformDataCairo.cpp
@@ -61,7 +61,7 @@ FontPlatformData FontCustomPlatformData::fontPlatformData(int size, bool bold, b
 
     auto hfont = adoptGDIObject(::CreateFontIndirect(&logFont));
 
-    cairo_font_face_t* fontFace = cairo_win32_font_face_create_for_hfont(hfont);
+    cairo_font_face_t* fontFace = cairo_win32_font_face_create_for_hfont(hfont.get());
 
     FontPlatformData fontPlatformData(hfont.leak(), fontFace, size, bold, italic);
 
